fixing the button place and the alignement of the content + adding a background image for the menu

--- a/style.css
+++ b/style.css
@@ -591,7 +591,7 @@ nav {
 #burger-overlay {
   display: none;
   position: fixed;
-  z-index: 10000;
+  z-index: 210;
   top: 0;
   left: 0;
   width: 100%;
@@ -603,7 +603,7 @@ nav {
 #burger-sidebar {
   position: fixed;
   width: 80%;
-  z-index: 20000;
+  z-index: 220;
   height: 100%;
   top: 0;
   left: 0;
@@ -619,9 +619,10 @@ nav {
   background-color: rgb(49, 46, 46);
 }
 #burger-sidebar-header {
-background-color: tomato;
-background-size: cover;
-height : 200px;
+background-color: silver;
+  background: url("../img/background-menu.jpg") center ;
+  background-size: cover;
+height : 150px;
 }
 
 #burger-sidebar-body li {
@@ -635,8 +636,8 @@ padding: 10px 8px;
 background-color: none;
 }
 .img-header {
-   height: 40px;
-   width: auto;
+   height: 40px !important;
+   width: auto !important;
    padding-right: 15px;
 }
 
